fix: Mobile Nav spacing

--- a/components/nav.module.scss
+++ b/components/nav.module.scss
@@ -157,6 +157,10 @@
                 //added
                 display: block !important;
             }
+
+            .sub-menu-mob li {
+                margin: 0 !important;
+            }
         }
     }
 }
