--- a/elements/altheader.module.scss
+++ b/elements/altheader.module.scss
@@ -98,33 +98,6 @@
     .access {
         li {
             display: block !important;
-            margin: 1rem 0;
         }
     }
-
-    /* .social-media-links {
-        li {
-            flex: 0 1 auto;
-            padding: 0.25rem;
-            line-height: 1;
-
-            a {
-                border-radius: 2px;
-                box-shadow: none;
-                font-weight: 400;
-                font-size: 1.25rem;
-                //line-height: 3rem;
-                padding: 1rem;
-                display: block;
-                text-transform: initial;
-                text-align: center;
-                margin: 0;
-            }
-
-            svg {
-                width: 1.25em;
-                display: inline;
-            }
-        }
-    } */
 }
